# gendot

./: CMakeLists.txt  README.md  package.xml  setup.py
cmake/: gendot-extras.cmake.em
scripts/: CMakeLists.txt  gen_dot.py  msg.dot.template  srv.dot.template
src/gendot/: __init__.py
